tests/format/junctions/invalid/junction-dep.bst
kind: stack
runtime-depends:
- base.bst
